# pinpulse

./: CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: DEVELOPMENT_SUMMARY.md  agent-status-bridge.zh.md
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_status.rs  commands.rs  db.rs  folder_binding.rs  git_status.rs  lib.rs  main.rs  markdown.rs  models.rs  progress_ingest.rs  reminder.rs  sync.rs  tests.rs
src/components/: SettingsDrawer.test.tsx  SettingsDrawer.tsx  StepEditor.test.tsx  StepEditor.tsx  SyncSettings.tsx  TaskCard.test.tsx  TaskCard.tsx  TaskDetails.test.tsx  TaskDetails.tsx
src/domain/: agentStatus.test.ts  agentStatus.ts  markdownProgress.test.ts  markdownProgress.ts  progress.test.ts  progress.ts  protocol.test.ts  protocol.ts  settings.test.ts  settings.ts  task.test.ts  task.ts
src/hooks/: useSettings.ts
src/services/: syncService.ts  taskRepository.test.ts  taskRepository.ts  tauriApi.ts  windowRepository.test.ts  windowRepository.ts
