[package]
name = "pinpulse-desktop"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "pinpulse-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pinpulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "sync", "time", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
time = "=0.3.45"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify = "7"

[[bin]]
name = "pinpulse-desktop"
path = "src/main.rs"

[[bin]]
name = "pinpulse-agent-status"
path = "src/bin/agent_status_helper.rs"

[dev-dependencies]
tempfile = "3"
